--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">LPGD - <strong>para Wordpress</strong></h1>
+		<h1 class="editable">LPGD <strong>Wordpress</strong></h1>
 		<p class="subtext editable">Implantação completa da LGPD para blogs e aplicações em Wordpress.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
 		<div>
