--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: LGPD para Wordpress
+description: Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.
 ---
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable">LPGD <strong>Wordpress</strong></h1>
-		<p class="subtext editable">Implantação completa da LGPD para blogs e aplicações em Wordpress.</p>
+		<p class="subtext editable">Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
