--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable"><strong>Fique</strong> compliance com a LGPD</h2>
+		<div class="button alt"><a href="#">Adquira já nossa plataforma</a></div>
 	</section>
 </div>
