--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Implantação <strong>completa</strong> no seu Blog ou Aplicação Wordpress</h2>
+				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. É obrigatória para todo e qualquer site empresarial que utiliza a plataforma Wordpress</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
