--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<div class="text-container">
 		<h1 class="editable">LPGD <strong>Wordpress</strong></h1>
 		<p class="subtext editable">Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Adquira já</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Prepare-se agora!</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
@@ -18,7 +18,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Implantação <strong>completa</strong> no seu Blog ou Aplicação Wordpress</h2>
-				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. É obrigatória para todo e qualquer site empresarial que utiliza a plataforma Wordpress</p>
+				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. O seu site ou aplicação em Wordpress precisa obrigatoriamente estar em conformidaderia com a nova lei. E nós temos a solução completa para a implantação limpa, fácil e rápida.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
