--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Implantação <strong>completa</strong> no seu Blog ou Aplicação Wordpress</h2>
-				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. O seu site ou aplicação em Wordpress precisa obrigatoriamente estar em conformidaderia com a nova lei. E nós temos a solução completa para a implantação limpa, fácil e rápida.</p>
+				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. O seu site ou aplicação em Wordpress precisa obrigatoriamente estar em conformidaderia com a nova lei. Nós temos a solução completa para a implantação segura e rápida.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
