--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<div class="text-container">
 		<h1 class="editable">LPGD <strong>Wordpress</strong></h1>
 		<p class="subtext editable">Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Prepare-se agora!</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Antecipe sua conformidade agora!</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
