--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<p>LGPD learns your business. By analyzing your sales data, LGPD optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -42,7 +42,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<p>LGPD learns your business. By analyzing your sales data, LGPD optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
