--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
+				<h2><strong>Segurança</strong> Jurídica</h2>
 				<p>LGPD learns your business. By analyzing your sales data, LGPD optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
