--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2><strong>Segurança</strong> Jurídica</h2>
-				<p>Proteja o seu negócio de possíveis multas governamentais e de processos indenizatórios individuais e/ou coletivos dos seus usuários e clientes.</p>
+				<p>Proteja o seu negócio baseado em Wordpress de possíveis multas governamentais e de processos indenizatórios individuais e/ou coletivos dos seus usuários e clientes.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
