--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>LGPD learns your business. By analyzing your sales data, LGPD optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Nossa <strong>Plataforma</strong> Automatizada</h2>
+				<p>A equipe LGPD-WP realiza a implantação da conformidade à lei para o seu negócio contemplando todo o universo Jurídico e Técnico necessário. Nossa plataforma automatizada insere todos os recursos requeridos da lei. Em conjunto com nossa equipe jurídica realizamos a integração perfeita com nosso time técnico de especialistas em Cloud Computing, Banco de Dados e é claro o Wordpress!</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
