--- a/index.html
+++ b/index.html
@@ -41,8 +41,20 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Nossa <strong>Plataforma</strong> Automatizada</h2>
-				<p>A equipe LGPD-WP realiza a implantação da conformidade à lei para o seu negócio contemplando todo o universo Jurídico e Técnico necessário. Nossa plataforma automatizada insere todos os recursos requeridos da lei. Em conjunto com nossa equipe jurídica realizamos a integração perfeita com nosso time técnico de especialistas em Cloud Computing, Banco de Dados e é claro o Wordpress!</p>
+				<h2><strong>Plataforma</strong> Automatizada</h2>
+				<p>A equipe LGPD-WP realiza a implantação da conformidade à lei para o seu negócio contemplando todo o universo Jurídico e Técnico necessário. Nossa plataforma automatizada adere a todos os recursos requeridos da lei. Muito mais que a aquisição de um software, nossas equipes Jurídico e Técnico realizam a integração perfeita da conformidade tanto para o seu cliente final como para o seu time interno.</p>
+			</div>
+			<div class="image">
+				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2><strong>Compliance / Conformidade</strong></h2>
+				<p>Nosso time é de especialistas: Advogados certificados em Privacidade de Dados e Proteção de Dados aliados a nossos Consultores de TI com competências em Cloud Computing, Banco de Dados e é claro WORDPRESS.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
