--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Implantação <strong>completa</strong> no seu Blog ou Aplicação Wordpress</h2>
+				<h2>Implantação <strong>completa</strong> para Wordpress</h2>
 				<p>A Lei Geral de Proteção de Dados Pessoais, Lei nº 13.709/2018, é a legislação brasileira que regula as atividades de tratamento de dados pessoais e que também altera os artigos 7º e 16 do Marco Civil da Internet. O seu site ou aplicação em Wordpress precisa obrigatoriamente estar em conformidade com a nova lei. Nós temos a solução completa para a implantação segura e rápida.</p>
 			</div>
 			<div class="image">
