--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 				<blockquote>
-					<p class="editable">A LGPD-WP resolveu nosso problema e tirou todas as dúvidas que tínhamos em relação a nova lei, nos entregando um projeto completo desde a confecção de termos de uso do nosso site até o sistema de auditoria, recursos obrigatórios da proteção dos dados que são de direito de nossos clientes agora incluídos dentro do perfil do usuário e da Dashboard de nosso Wordpress.</p>
+					<p class="editable">A LGPD-WP resolveu nosso problema e tirou todas as dúvidas que tínhamos em relação a nova lei, nos entregando um projeto completo desde a confecção de termos de uso do nosso site até o sistema de auditoria, recursos obrigatórios da proteção dos dados que são de direito de nossos clientes agora incluídos dentro do perfil do nosso cliente/usuário e da Dashboard do Wordpress.</p>
 					<p class="editable author">Rafael Belfort - CEO da Belfort Painting Corp.</p>
 				</blockquote>
 			</div>
