--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 		<div class="container flex">
 			<div class="text editable">
 				<h2><strong>Plataforma</strong> Automatizada</h2>
-				<p>A equipe LGPD-WP realiza a implantação da conformidade à lei para o seu negócio contemplando todo o universo Jurídico e Técnico necessário. Nossa plataforma automatizada adere a todos os recursos requeridos da lei. Muito mais que a aquisição de um software, nossas equipes Jurídico e Técnico realizam a integração perfeita da conformidade tanto para o seu cliente final como para o seu time interno.</p>
+				<p>A equipe LGPD-WP realiza a implantação da conformidade à lei para o seu negócio contemplando todo o universo Jurídico e Técnico necessário. Nossa plataforma automatizada adere a todos os recursos requeridos da lei. Muito mais que a aquisição de um software, nossas equipes Jurídico e Técnico realizam a integração perfeita da conformidade tanto para o seu cliente final como para os seus colaboradores internos.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
