--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Adequação completa da nova lei LGPD para blogs e aplicações em 
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">LPGD <strong>Wordpress</strong></h1>
+		<h1 class="editable">LGPD <strong>Wordpress</strong></h1>
 		<p class="subtext editable">Adequação completa a nova lei LGPD para sites, blogs, e-commerce e aplicações baseados em Wordpress.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Antecipe sua conformidade com desconto! Não deixe para a última hora (Ago/2020)</a></div>
 		<div>
