--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: LGPD para Wordpress
-description: Adequação completa da nova lei LGPD para blogs e aplicações em Wordpress.
+description: Adequação completa da nova Lei Geral de Proteção de Dados para blogs e aplicações em Wordpress.
 ---
 <section class="hero">
 	<div class="text-container">
