--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Adequação completa da nova Lei Geral de Proteção de Dados para 
 	<div class="text-container">
 		<h1 class="editable">LGPD <strong>Wordpress</strong></h1>
 		<p class="subtext editable">Adequação completa a nova 'Lei Geral de Proteção de Dados' para sites, blogs, e-commerce e aplicações baseados em Wordpress.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Antecipe sua conformidade com desconto! Não deixe para a última hora (Ago/2020)</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Antecipe sua conformidade com desconto. Não deixe para a última hora (Ago/2020)</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
