--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
-title: Contact
-heading: Get in touch today
+title: Contato
+heading: Entre em contato
 description: We'd love to help you improve your sales.
 
 map:
@@ -34,7 +34,7 @@ map:
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:support@example.com">suport@lgpd-wp.com.br</a></p>
 	</div>
 </div>
 
