--- a/recursos.html
+++ b/recursos.html
@@ -1,10 +1,10 @@
 ---
 title: Recursos
-description: Todos os Recursos contemplados de nossa plataforma.
+description: We've built an amazing team of developers, marketers, designers and sales people.
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/lista_recursos/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_lista_recursos/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
-	{% for person in site.lista_recursos %}
+	{% for person in site.staff_members %}
 		<li>
 			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
 			<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter }}">{{ person.name }}</a></div>
