--- a/recursos.html
+++ b/recursos.html
@@ -1,6 +1,6 @@
 ---
 title: Recursos
-description: We've built an amazing team of developers, marketers, designers and sales people.
+description: Seu Wordpress completamente preparado com toda estrutura necessária
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_lista_recursos/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
