--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 ---
-title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
+title: Assinatura
+heading: Encontre o melhor plano para o seu negócio baseado em Wordpress
+description: Todos os planos incluem adequação do código do Wordpress completa, com diferenças somente no tocante a assessoria Jurídica.
 pricing_table:
   - name: Basic
     color: "#8e8e8e"
